Fix to message box styling so it stretches across the page

--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -1,5 +1,5 @@
 .message-index-box {
-	max-width: 62vw;
+	// max-width: 62vw;
 	width: 100%;
 	height: 100vh;
 	padding-bottom: 20px;
